# DigitsClassification

./: CMakeLists.txt  README.md
include/: ConstantsSVM.h  Hog.h  Preprocess.h  SVM.h
src/: digits.cpp
src/demo/: CMakeLists.txt  demo.cpp
src/lib/: CMakeLists.txt
src/lib/modelSVM/: Hog.cpp  Preprocess.cpp  SVM.cpp
